@@ -1,3 +1,8 @@
+2017-01-24  Edward Jones  <ed.jones@embecosm.com>
+
+	* Driver.cpp: Convert input filenames to be absolute filenames for
+	internal use.
+
 2017-01-20  Edward Jones  <ed.jones@embecosm.com>
 
 	* CMakeLists.txt: Add a symlink from mageec-gcc to
